<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/notDrunk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notDrunk"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/visitNumber"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:text="@string/visitNumber"
        android:textAlignment="center"
        android:textColor="@color/defaultBlueText"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notDrunk"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/etComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/leaveComment"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visitNumber"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/buttonSaveComment"
        android:layout_width="77dp"
        android:layout_height="41dp"
        android:background="@color/buttonBackground"
        android:text="@string/save"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etComment"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/buttonViewComments"
        android:layout_width="196dp"
        android:layout_height="51dp"
        android:background="@color/buttonBackground"
        android:text="@string/viewPrevComments"
        android:textAlignment="center"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveComment" />
</androidx.constraintlayout.widget.ConstraintLayout>